FahMon: The Folding@home client monitoring program

SVN

    General
    
      Other
      
      * Removed option to save xyz files as new cores don't save this anymore
        anyway.
      * Added version info to update available message box.
      * Projects database saves immediately after migration to prevent data
        loss.

v2.3.99.3 (19/10/10)

    General

      Monitoring
      
      * Added fermi core support.

    Windows

      * Removed agressive exe stripping options when using MSVC 10.
      * Fixed bug where old projects file wasn't deleted.

v2.3.99.2 (17/10/10)

    General
    
      Monitoring
      
      * Added missing protomol core support.
      * Added missing openmmgpu core support.
      * Added bonus ppd (kfactor) support.
      * Added missing smp2 core support.

      Other

      * Fixed a number of thread safety issues which caused intermittent crashes
        and generally undesirable behaviour.
      * Added Simplified Chinese translation.
      * Added Slovak translation.
      * Projects database now stored in xml, and will migrate from old format
        automagically.

    Linux

      * Fixed accidental inclusion of a gcc debug warning level into
        compiliation. Removes the scary output from 2.3.99.1.
      * Fixed RPM .spec file. Thanks to "error".

    Windows

      * Now built against wxWidgets 2.8.11
      * Updated MSVC project to version 10.
      
v2.3.99.1 (06/04/09)

    General

      Monitoring

      * Added more rigorous checks to file handling to ensure that invalid file
        access attempts don't crash FahMon (particularly on Windows).

      Other

      * Updated German translation.

v2.3.99 (03/04/09)

    General

      GUI

      * Fixed total PPD value not updating unless a client is clicked.
      * Allow about and benchmark dialogs to be closed with escape key (thanks
        to smartcat99s).
      * Added columns for client type (determined from the core type) and core