@@ -26,6 +26,7 @@
 
 // --- Versions
 #define FMC_PROJECTS_VERSION 3 /**< The current projects database version */
+#define FMC_BENCHMARKS_VERSION 1 /**< The current benchmarks database version */
 
 
 // --- Limits
@@ -74,6 +75,7 @@
 
 
 // --- Directories
+#define FMC_DIR_XYZ         "./xyz/" /**< Name of xyz directory */
 #define FMC_DIR_IMAGES      "./images/" /**< Name of images directory */
 #define FMC_DIR_CONFIG      "./config/" /**< Name of config directory */
 
@@ -82,7 +84,7 @@
 #define FMC_FILE_PREFS      "prefs.dat" /**< Name of preferences file */
 #define FMC_FILE_CLIENTS    "clientstab.txt" /**< Name of clients list table file */
 #define FMC_FILE_PROJECTS   "projects.xml" /**< Name of projects database file */
-#define FMC_FILE_BENCHMARKS "benchmarks.dat" /**< Name of benchmarks database file */
+#define FMC_FILE_BENCHMARKS "benchmarks.xml" /**< Name of benchmarks database file */
 
 #define FMC_FILE_IMG_ABOUT             "main_icon.png" /**< Name of main program icon */
 #define FMC_FILE_IMG_DIALOG            "dialog_icon.png" /**< Name of main dialog icon */
